fix: some findings