@@ -9,7 +9,7 @@ public record ChecklistProgress(int checkedCount, int totalCount, int percentage
         if (totalCount <= 0) {
             return new ChecklistProgress(0, 0, 0);
         }
-        int safeChecked = Math.max(0, Math.min(checkedCount, totalCount));
+        int safeChecked = Math.clamp(checkedCount, 0, totalCount);
         int percentage = (int) Math.round(100.0 * safeChecked / totalCount);
         return new ChecklistProgress(safeChecked, totalCount, percentage);
     }
